# orbit

./: Cargo.toml  LICENSE
.github/workflows/: ci.yml  release.yml
distro/macos/: Info.plist  orbit.icns  package.sh
src/: app.rs  catalog.rs  hotkey.rs  icons.rs  launcher.rs  macos.rs  main.rs  scanner.rs  search.rs  tray.rs  view.rs  window.rs
