[package]
name = "orbit"
version = "0.2.0"
edition = "2024"

[dependencies]
crossbeam-channel = "0.5"
eframe = "0.35"
egui_taffy = "0.13"
file_icon_provider = "1"
global-hotkey = "0.8"
nucleo-matcher = "0.3"
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-service-management = "0.3"
plist = "1.9.0"
png = "0.17"
tray-icon = "0.24.1"
winit = "0.30"
